...
    case burglary, fire

    var id: String { rawValue }

    var title: String {
        switch self {
        case .burglary: "Burglary"
        case .fire: "Fire"
        }
    }

    var symbol: String {
        switch self {
...
